--- a/index.html
+++ b/index.html
@@ -69,10 +69,22 @@
     <div class="container">
       <h2 class="h2">Key Features</h2>
       <ul class="grid-wrapper">
-        <li class="grid one-quarter"><span class="h3">Lorem ipsum dolor</span></li>
-        <li class="grid one-quarter"><span class="h3">dolor sit amet</span></li>
-        <li class="grid one-quarter"><span class="h3">consectetur adipisicing</span></li>
-        <li class="grid one-quarter"><span class="h3">sed do eiusmod tempor</span></li>
+        <li class="grid one-quarter">
+          <img src="images/mobile.png" alt="" />
+          <span class="h3">Lorem ipsum dolor</span>
+        </li>
+        <li class="grid one-quarter">
+          <img src="images/sass.png" alt="" />
+          <span class="h3">dolor sit amet</span>
+        </li>
+        <li class="grid one-quarter">
+          <img src="images/lego.png" alt="" />
+          <span class="h3">consectetur adipisicing</span>
+        </li>
+        <li class="grid one-quarter">
+          <img src="images/light.png" alt="" />
+          <span class="h3">sed do eiusmod tempor</span>
+        </li>
       </ul>
     </div>
   </section>
