add gallery images

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </div>
         </div>
         <div class="grid one-half">
-          <div class="right padding figure-on-top">
+          <div class="right padding figure-on-top neg-margin">
             <img src="images/browser.png" alt="code" />
           </div>
         </div>
@@ -100,7 +100,7 @@
     <div class="container">
       <div class="grid-wrapper grid-wrapper--full">
         <div class="grid one-half">
-          <div class="left figure-on-top">
+          <div class="left figure-on-top neg-margin">
             <h2 class="h2">Launch Sequence</h2>
             <img src="images/ship.png" alt="spaceship" />
           </div>
@@ -132,13 +132,13 @@
       <h2 class="h2">Created with spaceBase</h2>
       <ul class="grid-wrapper">
         <li class="grid one-third">
-          <a href="http://space150.com" target="_blank"><img src="" alt="space150" />space150.com</a>
+          <a href="http://space150.com" target="_blank"><img src="images/space150.jpg" alt="space150" /><span>space150.com</span></a>
         </li>
         <li class="grid one-third">
-          <a href="http://pearsonscandy.com" target="_blank"><img src="" alt="Pearson's Candy" />pearsonscandy.com</a>
+          <a href="http://pearsonscandy.com" target="_blank"><img src="images/pearsons.jpg" alt="Pearson's Candy" /><span>pearsonscandy.com</span></a>
         </li>
         <li class="grid one-third">
-          <a href="http://pentiar.com" target="_blank"><img src="" alt="Pentair" />pentiar.com</a>
+          <a href="http://pentiar.com" target="_blank"><img src="images/pentair.jpg" alt="Pentair" /><span>pentiar.com</span></a>
         </li>
       </ul>
     </div>
