--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
     <div class="content-over-image">
       <h1 class="logo">spaceBase</h1>
-      <p class="subhead">A Sass-based Responsive CSS Framework</p>
+      <!--<p class="subhead">A Sass-based Responsive CSS Framework</p>-->
       <p>v 1.0</p>
       <p><a class="btn" href="https://github.com/space150/spaceBase/archive/v1.0.zip">Download</a><p>
       <p class="github"><a href="https://github.com/space150/spaceBase" target="_blank">GitHub</a></p>
@@ -45,7 +45,8 @@
   </section>
   <section class="intro padding">
     <div class="container narrow">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <h2 class="h3">spaceBase is a Sass-based responsive CSS framework.</h2>
+      <p>Many CSS frameworks are meant to be included and left alone. But spaceBase is a boilerplate layer that can be built upon and tailored for your needs. It combines best practices for today’s responsive web with the core components we use on every project. Consider it the launch pad for your adventures into cyberspace.</p>
     </div>
   </section>
   <section class="what">
@@ -54,7 +55,7 @@
         <div class="grid one-half">
           <div class="left padding">
             <h2 class="h2">What is it?</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>spaceBase is the front-end starter files for any new web project. It sets up your Sass architecture and normalizes your CSS and native HTML elements. It provides the structural groundwork for your application.</p>
           </div>
         </div>
         <div class="grid one-half">
@@ -71,19 +72,19 @@
       <ul class="grid-wrapper">
         <li class="grid one-quarter">
           <img src="images/mobile.png" alt="" />
-          <span class="h3">Lorem ipsum dolor</span>
+          <span class="h3">Fluid, Mobile-first Grid</span>
         </li>
         <li class="grid one-quarter">
           <img src="images/sass.png" alt="" />
-          <span class="h3">dolor sit amet</span>
+          <span class="h3">Sass-based</span>
         </li>
         <li class="grid one-quarter">
           <img src="images/lego.png" alt="" />
-          <span class="h3">consectetur adipisicing</span>
+          <span class="h3">Object-oriented CSS</span>
         </li>
         <li class="grid one-quarter">
           <img src="images/light.png" alt="" />
-          <span class="h3">sed do eiusmod tempor</span>
+          <span class="h3">Optimized for Lightspeed</span>
         </li>
       </ul>
     </div>
@@ -91,8 +92,12 @@
   <section class="features padding">
     <div class="container narrow">
       <h3 class="h3">More Features</h3>
-      <ul class="h-list">
-        <li></li>
+      <ul class="h-list h-list--centered">
+        <li>Common UI components (buttons, lists, media object)</li>
+        <li>Helper classes and mixins</li>
+        <li>Cross-browser form controls</li>
+        <li>Built on REMs</li>
+        <li>Supports all browsers including IE 6</li>
       </ul>
     </div>
   </section>
@@ -108,11 +113,11 @@
         <div class="grid one-half">
           <div class="right padding">
             <ol class="numbers">
-              <li><a href="https://github.com/space150/spaceBase/archive/v1.0.zip">Download the ZIP</a></li>
-              <li>Lorem ipsum dolor</li>
-              <li>dolor sit amet</li>
-              <li>consectetur adipisicing</li>
-              <li>sed do eiusmod tempor</li>
+              <li><a href="https://github.com/space150/spaceBase/archive/v1.0.zip">Download the ZIP</a>, unzip it and copy its contents to your project folder.</li>
+              <li>Activate either Compass or Bourbon to watch changes and compile the files.</li>
+              <li>Open scss/_vars.scss to make changes to your global variables.</li>
+              <li>Start building out your HTML. We’ve included index.html as a starting point.</li>
+              <li>scss/base/ is the core of spaceBase. Build your UI layer in scss/ui/</li>
             </ol>
           </div>
         </div>
@@ -123,7 +128,11 @@
     <div class="container narrow">
       <h2 class="h2">Customize</h2>
       <ul class="v-list">
-        <li></li>
+        <li>Compass (default) or Bourbon</li>
+        <li>Normalize (default) or CSS Reset</li>
+        <li>Scalable Grid - choose how robust you want it</li>
+        <li>Base font size for mobile vs desktop</li>
+        <li>Variables for breakpoints, colors and fonts</li>
       </ul>
     </div>
   </section>
@@ -180,7 +189,7 @@
   </section>
   <section class="contribute">
     <div class="container">
-      <p>Lorem ipsum dolor sit amet consectetur. <br />Tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p>All are welcome to contribute. <br />Bring your ideas on how we make this better.</p>
       <ul class="h-list h-list--centered">
         <li><a href="https://twitter.com/share" class="twitter-share-button" data-count="none" data-via="space150">Tweet</a><script type="text/javascript" src="//platform.twitter.com/widgets.js"></script></li>
         <li><iframe src="http://ghbtns.com/github-btn.html?user=space150&repo=spaceBase&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20"></iframe></li>
