add button hover state, add list dividers

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <section class="features padding">
     <div class="container narrow">
       <h3 class="h3">More Features</h3>
-      <ul class="h-list h-list--centered">
+      <ul class="v-list">
         <li>Common UI components (buttons, lists, media object)</li>
         <li>Helper classes and mixins</li>
         <li>Cross-browser form controls</li>
