update crew photo layout

--- a/index.html
+++ b/index.html
@@ -157,14 +157,10 @@
       <div class="grid-wrapper grid-wrapper--full">
         <div class="grid one-half">
           <div class="figure-on-top">
-            <div class="figure"><img src="images/crew.jpg" alt="space150 front-end engineers" /></div>
-            <div class="content-over-image">
-              <div class="table">
-                <div class="v-centered">
-                  <h2 class="h2">Mission Control</h2>
-                  <p><a href="http://space150.com" target="_blank">space150</a></p>
-                </div>
-              </div>
+            <div class="padding">
+              <h2 class="h2">Mission Control</h2>
+              <p><a href="http://space150.com" target="_blank">space150</a></p>
+              <div class="figure"><img src="images/crew.jpg" alt="space150 front-end engineers" /></div>
             </div>
           </div>
         </div>
