updates from james

--- a/index.html
+++ b/index.html
@@ -40,13 +40,12 @@
       <p>v 1.0</p>
       <p><a class="btn" href="https://github.com/space150/spaceBase/archive/v1.0.zip">Download</a><p>
       <p class="github"><a href="https://github.com/space150/spaceBase" target="_blank">GitHub</a></p>
-      <p class="shoutout">A <a href="http://space150.com" target="_blank">space150</a> product</p>
     </div>
   </section>
   <section class="intro padding">
     <div class="container narrow">
       <h2 class="h3">spaceBase is a Sass-based responsive CSS framework.</h2>
-      <p>Many CSS frameworks are meant to be included and left alone. But spaceBase is a boilerplate layer that can be built upon and tailored for your needs. It combines best practices for today’s responsive web with the core components we use on every project. Consider it the launch pad for your adventures into cyberspace.</p>
+      <p>Many CSS frameworks are meant to be included and left alone. But spaceBase is a boilerplate layer that can be built upon and tailored for your needs. It combines best practices for today’s responsive web with the core components we use on every project. Consider it the launch pad for your adventures <span class="no-wrap">into cyberspace.</span></p>
     </div>
   </section>
   <section class="what">
@@ -55,7 +54,7 @@
         <div class="grid one-half">
           <div class="left padding">
             <h2 class="h2">What is it?</h2>
-            <p>spaceBase is the front-end starter files for any new web project. It sets up your Sass architecture and normalizes your CSS and native HTML elements. It provides the structural groundwork for your application.</p>
+            <p>spaceBase is the front-end starter files for any new web project. It sets up your Sass architecture and normalizes your CSS and native HTML elements. It provides the structural groundwork for <span class="no-wrap">your application.</span></p>
           </div>
         </div>
         <div class="grid one-half">
@@ -147,7 +146,7 @@
           <a href="http://pearsonscandy.com" target="_blank"><img src="images/pearsons.jpg" alt="Pearson's Candy" /><span>pearsonscandy.com</span></a>
         </li>
         <li class="grid one-third">
-          <a href="http://pentiar.com" target="_blank"><img src="images/pentair.jpg" alt="Pentair" /><span>pentiar.com</span></a>
+          <a href="http://pentair.com" target="_blank"><img src="images/pentair.jpg" alt="Pentair" /><span>pentair.com</span></a>
         </li>
       </ul>
     </div>
@@ -195,7 +194,7 @@
   </section>
   <section class="footer">
     <img src="images/helmet.png" alt="spaceman" />
-    <p>&copy;2015 space150</p>
+    <p>&copy;2015 <a href="http://www.space150.com/approach/products/" target="_blank">space150</a></p>
   </section>
 </body>
 </html>
