--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <meta charset="UTF-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>spaceBase: a space150 product</title>
+    <title>spaceBase: A Sass-based Responsive CSS framework</title>
     <meta name="keywords" content="space150" />
-    <meta name="description" content="" />
+    <meta name="description" content="spaceBase is a boilerplate layer that can be built upon and tailored for your needs. It combines best practices for today’s responsive web with the core components we use on every project. Consider it the launch pad for your adventures into cyberspace." />
     <link rel="shortcut icon" href="favicon.ico">
     
     <meta property="og:site_name" content="spaceBase" />
-    <meta property="og:url" content="" />
+    <meta property="og:url" content="http://spacebase.space150.com" />
     <meta property="og:title" content="spaceBase: A Sass-based Responsive CSS Framework" />
-    <meta property="og:description" content="" />
+    <meta property="og:description" content="spaceBase is a boilerplate layer that can be built upon and tailored for your needs. It combines best practices for today’s responsive web with the core components we use on every project. Consider it the launch pad for your adventures into cyberspace." />
     <meta property="og:image" content="images/helmet.png" />
     <meta name="twitter:card" content="spaceBase" />
 
@@ -26,8 +26,6 @@
     <!--[if (lt IE 9) & (!IEMobile)]>
     <link href="stylesheets/application-ie.css" media="all" rel="stylesheet" type="text/css" />
     <![endif]-->
-    
-    <script src="javascripts/vendor/modernizr-2.8.3.js"></script>
 </head>
 <body>
   <!-- Google Tag Manager -->
