add modernizr for html5shiv and facebook social image'

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:url" content="http://spacebase.space150.com" />
     <meta property="og:title" content="spaceBase: A Sass-based Responsive CSS Framework" />
     <meta property="og:description" content="spaceBase is a boilerplate layer that can be built upon and tailored for your needs. It combines best practices for today’s responsive web with the core components we use on every project. Consider it the launch pad for your adventures into cyberspace." />
-    <meta property="og:image" content="images/helmet.png" />
+    <meta property="og:image" content="images/spacebase-facebook.jpg" />
     <meta name="twitter:card" content="spaceBase" />
 
     <!--[if (gt IE 8) | (IEMobile)]><!-->
@@ -26,6 +26,8 @@
     <!--[if (lt IE 9) & (!IEMobile)]>
     <link href="stylesheets/application-ie.css" media="all" rel="stylesheet" type="text/css" />
     <![endif]-->
+    
+    <script type="text/javascript" src="javascripts/vendor/modernizr.min.js"></script>
 </head>
 <body>
   <!-- Google Tag Manager -->
