--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
     <div class="container narrow">
       <h2 class="h3">spaceBase is a Sass-based responsive CSS framework.</h2>
       <p>Many CSS frameworks are meant to be included and left alone. But spaceBase is a boilerplate layer that can be built upon and tailored for your needs. It combines best practices for today’s responsive web with the core components we use on every project. Consider it the launch pad for your adventures <span class="no-wrap">into cyberspace.</span></p>
+      <br>
+      <p>** Coming Soon **</p>
+      <p>Documentation is currently in orbit. In the meantime, feel free to <a href="https://github.com/space150/spaceBase/tree/master/scss" target="_blank">explore!</a></p>
     </div>
   </section>
   <section class="what">
