update links to download

--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@
     </div>
     <div class="content-over-image">
       <h1 class="logo">spaceBase</h1>
-      <!--<p class="subhead">A Sass-based Responsive CSS Framework</p>-->
-      <p>v 1.0</p>
-      <p><a class="btn" href="https://github.com/space150/spaceBase/archive/v1.0.zip">Download</a><p>
+      <p>v 1.0.1</p>
+      <p><a class="btn" href="https://github.com/space150/spaceBase/archive/v1.0.1.zip">Download</a><p>
       <p class="github"><a href="https://github.com/space150/spaceBase" target="_blank">GitHub</a></p>
     </div>
   </section>
@@ -56,8 +55,8 @@
       <h2 class="h3">spaceBase is a Sass-based responsive CSS framework.</h2>
       <p>Many CSS frameworks are meant to be included and left alone. But spaceBase is a boilerplate layer that can be built upon and tailored for your needs. It combines best practices for today’s responsive web with the core components we use on every project. Consider it the launch pad for your adventures <span class="no-wrap">into cyberspace.</span></p>
       <br>
-      <p>** Coming Soon **</p>
-      <p>Documentation is currently in orbit. In the meantime, feel free to <a href="https://github.com/space150/spaceBase/tree/master/scss" target="_blank">explore!</a></p>
+      <p><strong>Coming Soon</strong></p>
+      <p>Documentation is currently in orbit. In the meantime, feel free to <a href="https://github.com/space150/spaceBase" target="_blank">explore!</a></p>
     </div>
   </section>
   <section class="what">
@@ -108,7 +107,7 @@
         <li>Helper classes and mixins</li>
         <li>Cross-browser form controls</li>
         <li>Built on REMs</li>
-        <li>Supports all browsers including IE 6</li>
+        <li>Supports all browsers including IE6+</li>
       </ul>
     </div>
   </section>
@@ -124,7 +123,7 @@
         <div class="grid one-half">
           <div class="right padding">
             <ol class="numbers">
-              <li><a href="https://github.com/space150/spaceBase/archive/v1.0.zip">Download the ZIP</a>, unzip it and copy its contents to your project folder.</li>
+              <li><a href="https://github.com/space150/spaceBase/archive/v1.0.1.zip">Download the ZIP</a>, unzip it and copy its contents to your project folder.</li>
               <li>Activate either Compass or Bourbon to watch changes and compile the files.</li>
               <li>Open scss/_vars.scss to make changes to your global variables.</li>
               <li>Start building out your HTML. We’ve included index.html as a starting point.</li>
@@ -192,7 +191,7 @@
     </div>
   </section>
   <section class="download">
-    <p><a class="btn" href="https://github.com/space150/spaceBase/archive/v1.0.zip">Download spaceBase</a><p>
+    <p><a class="btn" href="https://github.com/space150/spaceBase/archive/v1.0.1.zip">Download spaceBase</a><p>
   </section>
   <section class="contribute">
     <div class="container">
