add MM to example sites

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <h2 class="h2">Created with spaceBase</h2>
       <ul class="grid-wrapper">
         <li class="grid one-third">
-          <a href="http://space150.com" target="_blank"><img src="images/space150.jpg" alt="space150" /><span>space150.com</span></a>
+          <a href="http://minnetonkamoccasin.com" target="_blank"><img src="images/mm.jpg" alt="Minnetonka Moccasin" /><span>minnetonkamoccasin.com</span></a>
         </li>
         <li class="grid one-third">
           <a href="http://pearsonscandy.com" target="_blank"><img src="images/pearsons.jpg" alt="Pearson's Candy" /><span>pearsonscandy.com</span></a>
