add bower instructions, remove compass references

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>spaceBase: A Sass-based Responsive CSS framework</title>
     <meta name="keywords" content="space150" />
-    <meta name="description" content="spaceBase is a boilerplate layer that can be built upon and tailored for your needs. It combines best practices for today’s responsive web with the core components we use on every project. Consider it the launch pad for your adventures into cyberspace." />
+    <meta name="description" content="spaceBase is a boilerplate layer that can be built upon and tailored for your needs. It combines best practices for today's responsive web with the core components we use on every project. Consider it the launch pad for your adventures into cyberspace." />
     <link rel="shortcut icon" href="favicon.ico">
     
     <meta property="og:site_name" content="spaceBase" />
     <meta property="og:url" content="http://spacebase.space150.com" />
     <meta property="og:title" content="spaceBase: A Sass-based Responsive CSS Framework" />
-    <meta property="og:description" content="spaceBase is a boilerplate layer that can be built upon and tailored for your needs. It combines best practices for today’s responsive web with the core components we use on every project. Consider it the launch pad for your adventures into cyberspace." />
+    <meta property="og:description" content="spaceBase is a boilerplate layer that can be built upon and tailored for your needs. It combines best practices for today's responsive web with the core components we use on every project. Consider it the launch pad for your adventures into cyberspace." />
     <meta property="og:image" content="images/spacebase-facebook.jpg" />
     <meta name="twitter:card" content="spaceBase" />
 
@@ -53,7 +53,7 @@
   <section class="intro padding">
     <div class="container narrow">
       <h2 class="h3">spaceBase is a Sass-based responsive CSS framework.</h2>
-      <p>Many CSS frameworks are meant to be included and left alone. But spaceBase is a boilerplate layer that can be built upon and tailored for your needs. It combines best practices for today’s responsive web with the core components we use on every project. Consider it the launch pad for your adventures <span class="no-wrap">into cyberspace.</span></p>
+      <p>Many CSS frameworks are meant to be included and left alone. But spaceBase is a boilerplate layer that can be built upon and tailored for your needs. It combines best practices for today's responsive web with the core components we use on every project. Consider it the launch pad for your adventures <span class="no-wrap">into cyberspace.</span></p>
       <br>
       <p><strong>Coming Soon</strong></p>
       <p>Documentation is currently in orbit. In the meantime, feel free to <a href="https://github.com/space150/spaceBase" target="_blank">explore!</a></p>
@@ -107,7 +107,7 @@
         <li>Helper classes and mixins</li>
         <li>Cross-browser form controls</li>
         <li>Built on REMs</li>
-        <li>Supports all browsers including IE6+</li>
+        <li>Supports modern browsers including IE8+</li>
       </ul>
     </div>
   </section>
@@ -123,10 +123,10 @@
         <div class="grid one-half">
           <div class="right padding">
             <ol class="numbers">
-              <li><a href="https://github.com/space150/spaceBase/archive/v1.0.1.zip">Download the ZIP</a>, unzip it and copy its contents to your project folder.</li>
-              <li>Activate either Compass or Bourbon to watch changes and compile the files.</li>
+              <li><pre>$ bower install spacebase</pre> or <a href="https://github.com/space150/spaceBase/archive/v1.0.1.zip">download the ZIP</a> and copy its contents to your project folder.</li>
+              <li>Use your favorite Sass compiler to watch changes and compile the files.</li>
               <li>Open scss/_vars.scss to make changes to your global variables.</li>
-              <li>Start building out your HTML. We’ve included index.html as a starting point.</li>
+              <li>Start building out your HTML. We've included index.html as a starting point.</li>
               <li>scss/base/ is the core of spaceBase. Build your UI layer in scss/ui/</li>
             </ol>
           </div>
@@ -138,7 +138,7 @@
     <div class="container narrow">
       <h2 class="h2">Customize</h2>
       <ul class="v-list">
-        <li>Compass (default) or Bourbon</li>
+        <li>Compatible with any Sass compiler</li>
         <li>Normalize (default) or CSS Reset</li>
         <li>Scalable Grid - choose how robust you want it</li>
         <li>Base font size for mobile vs desktop</li>
@@ -178,11 +178,11 @@
           <div class="padding">
             <h2 class="h2">Credits</h2>
             <ul class="v-list">
-              <li><a href="https://github.com/csswizardry/inuit.css" target="_blank">Harry Robert’s Inuit.css</a></li>
+              <li><a href="https://github.com/csswizardry/inuit.css" target="_blank">Harry Robert's Inuit.css</a></li>
               <li><a href="http://getbootstrap.com" target="_blank">Bootstrap</a></li>
               <li><a href="http://html5boilerplate.com" target="_blank">HTML5 Boilerplate</a></li>
               <li><a href="http://necolas.github.io/normalize.css" target="_blank">Normalize.css</a></li>
-              <li><a href="http://meyerweb.com/eric/tools/css/reset" target="_blank">Eric Meyer’s CSS Reset</a></li>
+              <li><a href="http://meyerweb.com/eric/tools/css/reset" target="_blank">Eric Meyer's CSS Reset</a></li>
               <li><a href="http://www.amazon.com/Golden-Girls-Season-4/dp/B000C1VBAA" target="_blank">The Golden Girls - Season 4</a></li>
             </ul>
           </div>
