--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </li>
         <li class="grid one-quarter">
           <img src="images/light.png" alt="" />
-          <span class="h3">Optimized for Lightspeed</span>
+          <span class="h3">Optimized for Light Speed</span>
         </li>
       </ul>
     </div>
@@ -123,7 +123,7 @@
         <div class="grid one-half">
           <div class="right padding">
             <ol class="numbers">
-              <li><pre>$ bower install spacebase</pre> or <a href="https://github.com/space150/spaceBase/archive/v1.0.1.zip">download the ZIP</a> and copy its contents to your project folder.</li>
+              <li><pre>$ bower install spacebase</pre> or <a href="https://github.com/space150/spaceBase/archive/v1.0.1.zip">download the ZIP</a> and copy its contents into your project folder.</li>
               <li>Use your favorite Sass compiler to watch changes and compile the files.</li>
               <li>Open scss/_vars.scss to make changes to your global variables.</li>
               <li>Start building out your HTML. We've included index.html as a starting point.</li>
@@ -140,9 +140,9 @@
       <ul class="v-list">
         <li>Compatible with any Sass compiler</li>
         <li>Normalize (default) or CSS Reset</li>
-        <li>Scalable Grid - choose how robust you want it</li>
+        <li>Scalable grid - choose how robust you want it</li>
         <li>Base font size for mobile vs desktop</li>
-        <li>Variables for breakpoints, colors and fonts</li>
+        <li>Global variables for breakpoints, colors, fonts and more</li>
       </ul>
     </div>
   </section>
