--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
             <h2 class="h2">Credits</h2>
             <ul class="v-list">
               <li><a href="https://github.com/csswizardry/inuit.css" target="_blank">Harry Robert's Inuit.css</a></li>
+              <li><a href="https://github.com/sass-mq/sass-mq" target="_blank">Sass MQ</a></li>
               <li><a href="http://getbootstrap.com" target="_blank">Bootstrap</a></li>
               <li><a href="http://html5boilerplate.com" target="_blank">HTML5 Boilerplate</a></li>
               <li><a href="http://necolas.github.io/normalize.css" target="_blank">Normalize.css</a></li>
