add styleguide to site, pull in rest of spacebase and turn on all features

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@ layout: default
 <section class="what">
   <div class="container">
     <div class="grid-wrapper grid-wrapper--full">
-      <div class="grid one-half">
+      <div class="grid lap-one-half">
         <div class="left padding">
           <h2 class="h2">What is it?</h2>
           <p>spaceBase is the front-end starter files for any new web project. It sets up your Sass architecture and normalizes your CSS and native HTML elements. It provides the structural groundwork for <span class="no-wrap">your application.</span></p>
         </div>
       </div>
-      <div class="grid one-half">
+      <div class="grid lap-one-half">
         <div class="right padding figure-on-top neg-margin">
           <img src="images/browser.png" alt="code" />
         </div>
@@ -40,19 +40,19 @@ layout: default
   <div class="container">
     <h2 class="h2">Key Features</h2>
     <ul class="grid-wrapper">
-      <li class="grid one-quarter">
+      <li class="grid hand-one-half lap-one-quarter">
         <img src="images/mobile.png" alt="" />
         <span class="h3">Fluid, Mobile-first Grid</span>
       </li>
-      <li class="grid one-quarter">
+      <li class="grid hand-one-half lap-one-quarter">
         <img src="images/sass.png" alt="" />
         <span class="h3">Sass-based</span>
       </li>
-      <li class="grid one-quarter">
+      <li class="grid hand-one-half lap-one-quarter">
         <img src="images/lego.png" alt="" />
         <span class="h3">Object-oriented CSS</span>
       </li>
-      <li class="grid one-quarter">
+      <li class="grid hand-one-half lap-one-quarter">
         <img src="images/light.png" alt="" />
         <span class="h3">Optimized for Light Speed</span>
       </li>
@@ -74,13 +74,13 @@ layout: default
 <section class="launch">
   <div class="container">
     <div class="grid-wrapper grid-wrapper--full">
-      <div class="grid one-half">
+      <div class="grid lap-one-half">
         <div class="left figure-on-top neg-margin">
           <h2 class="h2">Launch Sequence</h2>
           <img src="images/ship.png" alt="spaceship" />
         </div>
       </div>
-      <div class="grid one-half">
+      <div class="grid lap-one-half">
         <div class="right padding">
           <ol class="numbers">
             <li><pre>$ bower install spacebase</pre> or <a href="https://github.com/space150/spaceBase/archive/2.0.1.zip">download the ZIP</a> and copy its contents into your project folder.</li>
@@ -110,13 +110,13 @@ layout: default
   <div class="container">
     <h2 class="h2">Created with spaceBase</h2>
     <ul class="grid-wrapper">
-      <li class="grid one-third">
+      <li class="grid lap-one-third">
         <a href="http://minnetonkamoccasin.com" target="_blank"><img src="images/mm.jpg" alt="Minnetonka Moccasin" /><span>minnetonkamoccasin.com</span></a>
       </li>
-      <li class="grid one-third">
+      <li class="grid lap-one-third">
         <a href="http://pearsonscandy.com" target="_blank"><img src="images/pearsons.jpg" alt="Pearson's Candy" /><span>pearsonscandy.com</span></a>
       </li>
-      <li class="grid one-third">
+      <li class="grid lap-one-third">
         <a href="http://pentair.com" target="_blank"><img src="images/pentair.jpg" alt="Pentair" /><span>pentair.com</span></a>
       </li>
     </ul>
@@ -125,7 +125,7 @@ layout: default
 <section class="credits">
   <div class="site-wrapper">
     <div class="grid-wrapper grid-wrapper--full">
-      <div class="grid one-half">
+      <div class="grid lap-one-half">
         <div class="figure-on-top">
           <div class="padding">
             <h2 class="h2">Mission Control</h2>
@@ -134,7 +134,7 @@ layout: default
           </div>
         </div>
       </div>
-      <div class="grid one-half">
+      <div class="grid lap-one-half">
         <div class="padding">
           <h2 class="h2">Credits</h2>
           <ul class="v-list">
