change grays on styleguide

--- a/styleguide.html
+++ b/styleguide.html
@@ -132,24 +132,24 @@ title: spaceBase Style Guide
     <h2 class="sg-heading">Colors</h2>
     <ul class="h-list sg-colors">
       <li>
-        <span style="background: #000000;" class="sg-swatch"></span>
-        <span class="sg-label">#000000<br>$black</span>
+        <span style="background: #583318;" class="sg-swatch"></span>
+        <span class="sg-label">#583318<br>$black</span>
       </li>
       <li>
-        <span style="background: #666666;" class="sg-swatch"></span>
-        <span class="sg-label">#666666<br>$gray-dark</span>
+        <span style="background: #91857d;" class="sg-swatch"></span>
+        <span class="sg-label">#91857d<br>$gray-dark</span>
       </li>
       <li>
-        <span style="background: #999999;" class="sg-swatch"></span>
-        <span class="sg-label">#999999<br>$gray</span>
+        <span style="background: #c2b2a7;" class="sg-swatch"></span>
+        <span class="sg-label">#c2b2a7<br>$gray</span>
       </li>
       <li>
-        <span style="background: #cccccc;" class="sg-swatch"></span>
-        <span class="sg-label">#cccccc<br>$gray-light</span>
+        <span style="background: #dfd7d0;" class="sg-swatch"></span>
+        <span class="sg-label">#dfd7d0<br>$gray-light</span>
       </li>
       <li>
-        <span style="background: #ffffff;" class="sg-swatch"></span>
-        <span class="sg-label">#ffffff<br>$white</span>
+        <span style="background: #fff9ee;" class="sg-swatch"></span>
+        <span class="sg-label">#fff9ee<br>$white</span>
       </li>
       <li>
         <span style="background: #7abcb5;" class="sg-swatch"></span>
