--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ layout: default
             <li><pre>$ bower install spacebase</pre> or <a href="https://github.com/space150/spaceBase/archive/2.0.1.zip">download the ZIP</a> and copy its contents into your project folder.</li>
             <li>Use your favorite Sass compiler to watch changes and compile the files.</li>
             <li>Open scss/_vars.scss to make changes to your global variables.</li>
-            <li>Start building out your HTML. We've included index.html as a starting point.</li>
+            <li>Start building out your HTML. We've included index.html and <a href="styleguide.html">styleguide.html</a> to begin with.</li>
             <li>scss/base/ is the core of spaceBase. Build your UI layer in scss/ui/</li>
           </ol>
         </div>
