add back button to styleguide

--- a/styleguide.html
+++ b/styleguide.html
@@ -8,7 +8,7 @@ title: spaceBase Style Guide
 <div class="sg container">
   <div class="island text-center">
     <h1>spaceBase Style Guide</h1>
-    <p><a href="https://github.com/space150/spaceBase" target="_blank">View on GitHub</a></p>
+    <p><a href="/">Back</a> | <a href="https://github.com/space150/spaceBase" target="_blank">View on GitHub</a></p>
   </div>
   <div class="sg-landmark">
     <h2 class="sg-heading">Basic Grid</h2>
