update top of styleguide

--- a/styleguide.html
+++ b/styleguide.html
@@ -6,37 +6,37 @@ title: spaceBase Style Guide
 <link href="css/styleguide.css" rel="stylesheet" type="text/css">
 
 <div class="sg container">
-  <div class="island text-center">
+  <div class="island landmarklet text-center">
     <h1>spaceBase Style Guide</h1>
     <p><a href="/">Back</a> &nbsp; | &nbsp; <a href="https://github.com/space150/spaceBase" target="_blank">View on GitHub</a></p>
   </div>
   <div class="sg-landmark">
     <h2 class="sg-heading">Basic Grid</h2>
-    <p>The grid below shows a combination of nested, reversed, and gutterless grids. Each integer represents the high-level grid item you are looking at, and each decimal represents the grid item’s level of nesting (if any), e.g. Grid 2.3 represents the third nested grid inside of the second major grid.</p>
+    <p>The grid below shows a combination of nested, reversed, and gutterless grids. Each integer represents the high-level grid item you are looking at, and each decimal represents the grid item’s level of nesting (if any), e.g. 2.3 represents the third nested grid inside of the second major grid.</p>
     <div class="grid-wrapper">
       <div class="grid  one-half">
         <div class="grid-wrapper">
           <div class="grid">
-            <p class="sg-demo-block">1.1</p>
+            <p class="sg-demo-block">Grid 1.1</p>
           </div>
           <div class="grid  one-third">
-            <p class="sg-demo-block">1.2</p>
+            <p class="sg-demo-block">Grid 1.2</p>
           </div>
           <div class="grid  two-thirds">
-            <p class="sg-demo-block">1.3</p>
+            <p class="sg-demo-block">Grid 1.3</p>
           </div>
         </div>
       </div>
       <div class="grid  one-half">
         <div class="grid-wrapper">
           <div class="grid  one-quarter">
-            <p class="sg-demo-block">2.1</p>
+            <p class="sg-demo-block">Grid 2.1</p>
           </div>
           <div class="grid  three-quarters">
-            <p class="sg-demo-block">2.2</p>
+            <p class="sg-demo-block">Grid 2.2</p>
           </div>
           <div class="grid">
-            <p class="sg-demo-block">2.3</p>
+            <p class="sg-demo-block">Grid 2.3</p>
           </div>
         </div>
       </div>
@@ -44,13 +44,13 @@ title: spaceBase Style Guide
         <h3 class="sg-heading">Reverse Grid</h3>
         <div class="grid-wrapper  grid-wrapper--rev">
           <div class="grid  one-third">
-            <p class="sg-demo-block">3.1</p>
+            <p class="sg-demo-block">Grid 3.1</p>
           </div>
           <div class="grid  one-third">
-            <p class="sg-demo-block">3.2</p>
+            <p class="sg-demo-block">Grid 3.2</p>
           </div>
           <div class="grid  one-third">
-            <p class="sg-demo-block">3.3</p>
+            <p class="sg-demo-block">Grid 3.3</p>
           </div>
         </div>
       </div>
@@ -58,16 +58,16 @@ title: spaceBase Style Guide
         <h3 class="sg-heading">Full Grid</h3>
         <div class="grid-wrapper  grid-wrapper--full">
           <div class="grid  one-eighth">
-            <p class="sg-demo-block">4.1</p>
+            <p class="sg-demo-block">Grid 4.1</p>
           </div>
           <div class="grid  two-eighths">
-            <p class="sg-demo-block">4.2</p>
+            <p class="sg-demo-block">Grid 4.2</p>
           </div>
           <div class="grid  three-eighths">
-            <p class="sg-demo-block">4.3</p>
+            <p class="sg-demo-block">Grid 4.3</p>
           </div>
           <div class="grid  two-eighths">
-            <p class="sg-demo-block">4.4</p>
+            <p class="sg-demo-block">Grid 4.4</p>
           </div>
         </div>
       </div>
@@ -75,10 +75,10 @@ title: spaceBase Style Guide
         <h3 class="sg-heading">Push and Pull</h3>
         <div class="grid-wrapper">
           <div class="grid  one-quarter  push--one-quarter">
-            <p class="sg-demo-block">5.1</p>
+            <p class="sg-demo-block">Grid 5.1</p>
           </div>
           <div class="grid  one-quarter  push--one-quarter">
-            <p class="sg-demo-block">5.2</p>
+            <p class="sg-demo-block">Grid 5.2</p>
           </div>
         </div>
       </div>
@@ -91,40 +91,40 @@ title: spaceBase Style Guide
       <div class="grid  one-half">
         <div class="grid-wrapper">
           <div class="grid">
-            <p class="sg-demo-block">1.1</p>
+            <p class="sg-demo-block">Grid 1.1</p>
           </div>
           <div class="grid  lap-one-whole  desk-one-third">
-            <p class="sg-demo-block">1.2</p>
+            <p class="sg-demo-block">Grid 1.2</p>
           </div>
           <div class="grid  lap-one-whole  desk-two-thirds">
-            <p class="sg-demo-block">1.3</p>
+            <p class="sg-demo-block">Grid 1.3</p>
           </div>
         </div>
       </div>
       <div class="grid  one-half">
         <div class="grid-wrapper">
           <div class="grid  one-half">
-            <p class="sg-demo-block">2.1</p>
+            <p class="sg-demo-block">Grid 2.1</p>
           </div>
           <div class="grid  one-half">
-            <p class="sg-demo-block">2.2</p>
+            <p class="sg-demo-block">Grid 2.2</p>
           </div>
           <div class="grid  lap-one-half  desk-one-third">
-            <p class="sg-demo-block">2.3</p>
+            <p class="sg-demo-block">Grid 2.3</p>
           </div>
           <div class="grid  lap-one-half  desk-one-third">
-            <p class="sg-demo-block">2.4</p>
+            <p class="sg-demo-block">Grid 2.4</p>
           </div>
           <div class="grid  desk-one-third">
-            <p class="sg-demo-block">2.5</p>
+            <p class="sg-demo-block">Grid 2.5</p>
           </div>
         </div>
       </div>
       <div class="grid  hand-one-half  lap-one-quarter desk-two-fifths">
-        <p class="sg-demo-block">3.0</p>
+        <p class="sg-demo-block">Grid 3.0</p>
       </div>
       <div class="grid  hand-one-half  lap-three-quarters desk-three-fifths">
-        <p class="sg-demo-block">4.0</p>
+        <p class="sg-demo-block">Grid 4.0</p>
       </div>
     </div>
   </div>
