--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@ layout: default
     <h2 class="h2">Key Features</h2>
     <ul class="grid-wrapper">
       <li class="grid hand-one-half lap-one-quarter">
-        <img src="images/mobile.png" alt="" />
-        <span class="h3">Fluid, Mobile-first Grid</span>
+        <img src="images/mobile.png" alt="mobile phone" />
+        <span class="h3">Mobile-first Grid</span>
       </li>
       <li class="grid hand-one-half lap-one-quarter">
-        <img src="images/sass.png" alt="" />
+        <img src="images/sass.png" alt="sass" />
         <span class="h3">Sass-based</span>
       </li>
       <li class="grid hand-one-half lap-one-quarter">
-        <img src="images/lego.png" alt="" />
+        <img src="images/lego.png" alt="building block" />
         <span class="h3">Object-oriented CSS</span>
       </li>
       <li class="grid hand-one-half lap-one-quarter">
-        <img src="images/light.png" alt="" />
+        <img src="images/light.png" alt="flashlight" />
         <span class="h3">Optimized for Light Speed</span>
       </li>
     </ul>
@@ -63,10 +63,9 @@ layout: default
   <div class="container narrow">
     <h3 class="h3">More Features</h3>
     <ul class="v-list">
-      <li>Common UI components (buttons, lists, media object)</li>
+      <li>Common UI components</li>
       <li>Helper classes and mixins</li>
       <li>Cross-browser form controls</li>
-      <li>Built on REMs</li>
       <li>Supports modern browsers including IE8+</li>
     </ul>
   </div>
@@ -83,7 +82,7 @@ layout: default
       <div class="grid lap-one-half">
         <div class="right padding">
           <ol class="numbers">
-            <li><pre>$ bower install spacebase</pre> or <a href="https://github.com/space150/spaceBase/archive/v3.0.1.zip">download the ZIP</a> and copy its contents into your project folder.</li>
+            <li><pre>$ npm install spacebase</pre> or <a href="https://github.com/space150/spaceBase/archive/v3.0.1.zip">download the ZIP</a> and copy its contents into your project folder.</li>
             <li>Use your favorite Sass compiler to watch changes and compile the files.</li>
             <li>Open scss/_vars.scss to make changes to your global variables.</li>
             <li>Start building out your HTML. We've included index.html and <a href="styleguide.html">styleguide.html</a> to begin with.</li>
@@ -98,9 +97,9 @@ layout: default
   <div class="container narrow">
     <h2 class="h2">Customize</h2>
     <ul class="v-list">
-      <li>Compatible with any Sass compiler</li>
-      <li>Normalize (default) or CSS Reset</li>
-      <li>Scalable grid - choose how robust you want it</li>
+      <li>Compatible with any Sass 3.3 compiler</li>
+      <li>Start with Normalize (default) or CSS Reset</li>
+      <li>Scalable, mobile-first grid - choose how robust you want it</li>
       <li>Base font size for mobile vs desktop</li>
       <li>Global variables for breakpoints, colors, fonts and more</li>
     </ul>
@@ -129,8 +128,8 @@ layout: default
         <div class="figure-on-top">
           <div class="padding">
             <h2 class="h2">Mission Control</h2>
-            <p><a href="http://space150.com" target="_blank">space150</a></p>
-            <div class="figure"><img src="images/crew.jpg" alt="space150 front-end engineers" /></div>
+            <p><a href="http://www.space150.com" target="_blank">space150</a></p>
+            <div class="figure"><img src="images/crew.jpg" alt="space150 software engineers" /></div>
           </div>
         </div>
       </div>
@@ -141,7 +140,6 @@ layout: default
             <li><a href="https://github.com/csswizardry/inuit.css" target="_blank">Harry Robert's Inuit.css</a></li>
             <li><a href="https://github.com/sass-mq/sass-mq" target="_blank">Sass MQ</a></li>
             <li><a href="http://getbootstrap.com" target="_blank">Bootstrap</a></li>
-            <li><a href="http://html5boilerplate.com" target="_blank">HTML5 Boilerplate</a></li>
             <li><a href="http://necolas.github.io/normalize.css" target="_blank">Normalize.css</a></li>
             <li><a href="http://meyerweb.com/eric/tools/css/reset" target="_blank">Eric Meyer's CSS Reset</a></li>
             <li><a href="http://www.amazon.com/Golden-Girls-Season-4/dp/B000C1VBAA" target="_blank">The Golden Girls - Season 4</a></li>
