--- a/styleguide.html
+++ b/styleguide.html
@@ -6,7 +6,7 @@ title: spaceBase Style Guide
 <link href="css/styleguide.css" rel="stylesheet" type="text/css">
 
 <div class="sg container">
-  <div class="island landmarklet text-center">
+  <div class="island text-center">
     <h1>spaceBase Style Guide</h1>
     <p><a href="/">Back</a> &nbsp; | &nbsp; <a href="https://github.com/space150/spaceBase" target="_blank">View on GitHub</a></p>
   </div>
@@ -17,26 +17,26 @@ title: spaceBase Style Guide
       <div class="grid  one-half">
         <div class="grid-wrapper">
           <div class="grid">
-            <p class="sg-demo-block">Grid 1.1</p>
+            <p class="sg-demo-block">1.1</p>
           </div>
           <div class="grid  one-third">
-            <p class="sg-demo-block">Grid 1.2</p>
+            <p class="sg-demo-block">1.2</p>
           </div>
           <div class="grid  two-thirds">
-            <p class="sg-demo-block">Grid 1.3</p>
+            <p class="sg-demo-block">1.3</p>
           </div>
         </div>
       </div>
       <div class="grid  one-half">
         <div class="grid-wrapper">
           <div class="grid  one-quarter">
-            <p class="sg-demo-block">Grid 2.1</p>
+            <p class="sg-demo-block">2.1</p>
           </div>
           <div class="grid  three-quarters">
-            <p class="sg-demo-block">Grid 2.2</p>
+            <p class="sg-demo-block">2.2</p>
           </div>
           <div class="grid">
-            <p class="sg-demo-block">Grid 2.3</p>
+            <p class="sg-demo-block">2.3</p>
           </div>
         </div>
       </div>
@@ -44,13 +44,13 @@ title: spaceBase Style Guide
         <h3 class="sg-heading">Reverse Grid</h3>
         <div class="grid-wrapper  grid-wrapper--rev">
           <div class="grid  one-third">
-            <p class="sg-demo-block">Grid 3.1</p>
+            <p class="sg-demo-block">3.1</p>
           </div>
           <div class="grid  one-third">
-            <p class="sg-demo-block">Grid 3.2</p>
+            <p class="sg-demo-block">3.2</p>
           </div>
           <div class="grid  one-third">
-            <p class="sg-demo-block">Grid 3.3</p>
+            <p class="sg-demo-block">3.3</p>
           </div>
         </div>
       </div>
@@ -58,27 +58,27 @@ title: spaceBase Style Guide
         <h3 class="sg-heading">Full Grid</h3>
         <div class="grid-wrapper  grid-wrapper--full">
           <div class="grid  one-eighth">
-            <p class="sg-demo-block">Grid 4.1</p>
+            <p class="sg-demo-block">4.1</p>
           </div>
           <div class="grid  two-eighths">
-            <p class="sg-demo-block">Grid 4.2</p>
+            <p class="sg-demo-block">4.2</p>
           </div>
           <div class="grid  three-eighths">
-            <p class="sg-demo-block">Grid 4.3</p>
+            <p class="sg-demo-block">4.3</p>
           </div>
           <div class="grid  two-eighths">
-            <p class="sg-demo-block">Grid 4.4</p>
+            <p class="sg-demo-block">4.4</p>
           </div>
         </div>
       </div>
       <div class="grid">
-        <h3 class="sg-heading">Push and Pull</h3>
+        <h3 class="sg-heading">Push</h3>
         <div class="grid-wrapper">
           <div class="grid  one-quarter  push--one-quarter">
-            <p class="sg-demo-block">Grid 5.1</p>
+            <p class="sg-demo-block">6.1</p>
           </div>
-          <div class="grid  one-quarter  push--one-quarter">
-            <p class="sg-demo-block">Grid 5.2</p>
+          <div class="grid  one-quarter">
+            <p class="sg-demo-block">6.2</p>
           </div>
         </div>
       </div>
@@ -91,40 +91,40 @@ title: spaceBase Style Guide
       <div class="grid  one-half">
         <div class="grid-wrapper">
           <div class="grid">
-            <p class="sg-demo-block">Grid 1.1</p>
+            <p class="sg-demo-block">1.1</p>
           </div>
           <div class="grid  lap-one-whole  desk-one-third">
-            <p class="sg-demo-block">Grid 1.2</p>
+            <p class="sg-demo-block">1.2</p>
           </div>
           <div class="grid  lap-one-whole  desk-two-thirds">
-            <p class="sg-demo-block">Grid 1.3</p>
+            <p class="sg-demo-block">1.3</p>
           </div>
         </div>
       </div>
       <div class="grid  one-half">
         <div class="grid-wrapper">
           <div class="grid  one-half">
-            <p class="sg-demo-block">Grid 2.1</p>
+            <p class="sg-demo-block">2.1</p>
           </div>
           <div class="grid  one-half">
-            <p class="sg-demo-block">Grid 2.2</p>
+            <p class="sg-demo-block">2.2</p>
           </div>
           <div class="grid  lap-one-half  desk-one-third">
-            <p class="sg-demo-block">Grid 2.3</p>
+            <p class="sg-demo-block">2.3</p>
           </div>
           <div class="grid  lap-one-half  desk-one-third">
-            <p class="sg-demo-block">Grid 2.4</p>
+            <p class="sg-demo-block">2.4</p>
           </div>
           <div class="grid  desk-one-third">
-            <p class="sg-demo-block">Grid 2.5</p>
+            <p class="sg-demo-block">2.5</p>
           </div>
         </div>
       </div>
       <div class="grid  hand-one-half  lap-one-quarter desk-two-fifths">
-        <p class="sg-demo-block">Grid 3.0</p>
+        <p class="sg-demo-block">3.0</p>
       </div>
       <div class="grid  hand-one-half  lap-three-quarters desk-three-fifths">
-        <p class="sg-demo-block">Grid 4.0</p>
+        <p class="sg-demo-block">4.0</p>
       </div>
     </div>
   </div>
@@ -132,40 +132,40 @@ title: spaceBase Style Guide
     <h2 class="sg-heading">Colors</h2>
     <ul class="h-list sg-colors">
       <li>
-        <span style="background: #583318;" class="sg-swatch"></span>
-        <span class="sg-label">#583318<br>$black</span>
+        <span class="sg-swatch"></span>
+        <span class="sg-label">$black</span>
       </li>
       <li>
-        <span style="background: #91857d;" class="sg-swatch"></span>
-        <span class="sg-label">#91857d<br>$gray-dark</span>
+        <span class="sg-swatch"></span>
+        <span class="sg-label">$gray-dark</span>
       </li>
       <li>
-        <span style="background: #c2b2a7;" class="sg-swatch"></span>
-        <span class="sg-label">#c2b2a7<br>$gray</span>
+        <span class="sg-swatch"></span>
+        <span class="sg-label">$gray</span>
       </li>
       <li>
-        <span style="background: #dfd7d0;" class="sg-swatch"></span>
-        <span class="sg-label">#dfd7d0<br>$gray-light</span>
+        <span class="sg-swatch"></span>
+        <span class="sg-label">$gray-light</span>
       </li>
       <li>
-        <span style="background: #fff9ee;" class="sg-swatch"></span>
-        <span class="sg-label">#fff9ee<br>$white</span>
+        <span class="sg-swatch"></span>
+        <span class="sg-label">$white</span>
       </li>
       <li>
-        <span style="background: #7abcb5;" class="sg-swatch"></span>
-        <span class="sg-label">#7abcb5<br>$primary</span>
+        <span class="sg-swatch"></span>
+        <span class="sg-label">$primary</span>
       </li>
       <li>
-        <span style="background: #41a29c;" class="sg-swatch"></span>
-        <span class="sg-label">#41a29c<br>$secondary</span>
+        <span class="sg-swatch"></span>
+        <span class="sg-label">$secondary</span>
       </li>
       <li>
-        <span style="background: #e48d38;" class="sg-swatch"></span>
-        <span class="sg-label">#e48d38<br>$tertiary</span>
+        <span class="sg-swatch"></span>
+        <span class="sg-label">$tertiary</span>
       </li>
       <li>
-        <span style="background: #c46e35;" class="sg-swatch"></span>
-        <span class="sg-label">#c46e35<br>$quaternary</span>
+        <span class="sg-swatch"></span>
+        <span class="sg-label">$quaternary</span>
       </li>
     </ul>
   </div>
@@ -303,47 +303,6 @@ title: spaceBase Style Guide
     <p><strong>Lorem ipsum</strong> dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</p>
   </div>
   <div class="sg-landmark">
-    <h2 class="sg-heading">Media Object</h2>
-    <div class="grid-wrapper">
-      <div class="grid lap-one-half">
-        <div class="media landmark">
-          <div class="media__item">
-            <img src="http://placehold.it/80" alt="">
-          </div>
-          <div class="media__body">
-            <p><strong>.media</strong>: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          </div>
-        </div>
-        <div class="media media--nowrap landmark">
-          <div class="media__item">
-            <img src="http://placehold.it/80" alt="">
-          </div>
-          <div class="media__body">
-            <p><strong>.media.media--nowrap</strong>: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          </div>
-        </div>
-      </div>
-      <div class="grid lap-one-half">
-        <div class="media media--flip landmark">
-          <div class="media__item">
-            <img src="http://placehold.it/80" alt="">
-          </div>
-          <div class="media__body">
-            <p><strong>.media.media--flip</strong>: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          </div>
-        </div>
-        <div class="media media--valign landmark">
-          <div class="media__item">
-            <img src="http://placehold.it/80" alt="">
-          </div>
-          <div class="media__body">
-            <p><strong>.media.media--valign</strong>: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="sg-landmark">
     <h2 class="sg-heading">Form Buttons</h2>
     <form>
       <div class="grid-wrapper">
@@ -389,10 +348,6 @@ title: spaceBase Style Guide
           <div class="sg-field-container">
             <label for="password">Password</label>
             <input type="password" placeholder="Type your Password" id="password" class="form-control">
-          </div>
-          <div class="sg-field-container">
-            <label for="url">Web Address</label>
-            <input type="url" placeholder="http://yoursite.com" id="url" class="form-control">
           </div>
           <div class="sg-field-container">
             <label for="email">Email Address</label>
@@ -472,35 +427,6 @@ title: spaceBase Style Guide
             <li class="radio has-error"><label for="radio5"><input type="radio" name="radio" id="radio5"> Option Error</label></li>
             <li class="radio has-success"><label for="radio6"><input type="radio" name="radio" id="radio6"> Option Valid</label></li>
           </ul>
-        </div>
-      </div>
-      <div class="grid-wrapper">
-        <div class="grid lap-one-third">
-          <h3 class="sg-heading">HTML5 Inputs</h3>
-          <div class="sg-field-container">
-            <label for="ic">Color input</label>
-            <input type="color" value="#000000" id="ic" class="form-control">
-          </div>
-          <div class="sg-field-container">
-            <label for="in">Number input</label>
-            <input type="number" value="5" max="10" min="0" id="in" class="form-control">
-          </div>
-          <div class="sg-field-container">
-            <label for="ir">Range input</label>
-            <input type="range" value="10" id="ir">
-          </div>
-          <div class="sg-field-container">
-            <label for="idd">Date input</label>
-            <input type="date" value="1970-01-01" id="idd" class="form-control">
-          </div>
-          <div class="sg-field-container">
-            <label for="idm">Month input</label>
-            <input type="month" value="1970-01" id="idm" class="form-control">
-          </div>
-          <div class="sg-field-container">
-            <label for="idw">Week input</label>
-            <input type="week" value="1970-W01" id="idw" class="form-control">
-          </div>
         </div>
       </div>
     </form>
